Fixed navigation issue on small screens, closed #73

--- a/frontend/src/app/navigation/navigation.component.css
+++ b/frontend/src/app/navigation/navigation.component.css
@@ -1,5 +1,6 @@
 :host {
-    min-height: 100vh;
+    height: 100vh;
+    overflow-y: scroll;
 }
 
 header, nav {
@@ -36,6 +37,8 @@ nav > ul > li {
     :host {
         min-height: auto;
         width: 100%;
+        height: fit-content;
+        overflow-y: visible;
     }
 
     .nav-item {
